--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,7 @@ main aside {
 }
 
 .cards {
+    list-style: none;
     display: grid;
     grid-template-columns: repeat(5, minmax(50px, 125px));
     justify-content: space-between;
@@ -209,8 +210,12 @@ main aside {
 }
 
 .card:hover {
-    opacity: 0.8;
+    opacity: 0.5;
     cursor: pointer;
+}
+
+.card:active {
+    opacity: 1;
 }
 
 .card img {
@@ -246,6 +251,151 @@ main aside {
     text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     color: #eee;
 }
+
+.active-card {
+    opacity: 0.5;
+}
+
+
+.container-fluid {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    overflow: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-detail {
+    width: 45%;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 40px;
+    padding-bottom: 80px;
+    background-color: white;
+    border-radius: 10px;
+    position: relative;
+    transform: scale(0.8);
+    opacity: 0;
+    animation: animationShow 0.2s forwards;
+}
+
+
+.animation-hide {
+    animation: animationHide 0.2s forwards;
+}
+
+.card-detail h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.card-detail-body {
+    display: flex;
+    border: 1px solid #ddd;
+}
+
+.detail-image {
+    padding: 20px;
+    border-right: 1px solid #ddd;
+    /* background-color: orange; */
+}
+
+.detail-image img {
+    width: 200px;
+    height: 300px;
+}
+
+.detail-info {
+    list-style: none;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 14px;
+    /* background-color: blue; */
+}
+
+.close-button {
+    background-color: #d22f27;
+    padding: 10px 25px;
+    border: none;
+    margin-top: 10px;
+    font-weight: bold;
+    color: white;
+    border-radius: 5px;
+    position: absolute;
+    right: 20px;
+    bottom: 30px;
+}
+
+.close-x {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: #d22f27;
+    border: none;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    font-weight: bold;
+    color: #d22f27;
+    line-height: 18px;
+    text-align: center;
+}
+
+.close-x:hover {
+    color: #111;
+}
+
+.close:hover {
+    background-color: #b61810;
+    cursor: pointer;
+}
+
+.close:active {
+    background-color: #d22f27;
+}
+
+.detail-info li {
+    border-bottom: 1px solid #ddd;
+    padding: 15px 0;
+}
+
+
+
+@keyframes animationShow {
+    0% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@keyframes animationHide {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+}
+
+
 
 
 /* scroll */
