--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: 230px 1fr;
+    grid-template-columns: minmax(200px, 18%) 1fr;
 }
 
 header {
@@ -29,7 +29,7 @@ nav ul {
 }
 
 nav h3 {
-    font-size: 15px;
+    font-size: 0.9em;
     font-weight: normal;
     margin-left: 20px;
     margin-bottom: 10px;
@@ -38,7 +38,7 @@ nav h3 {
 
 
 nav li a {
-    font-size: 15px;
+    font-size: 0.9em;
     font-weight: bold;
     margin-bottom: 10px;
     text-decoration: none;
@@ -46,7 +46,6 @@ nav li a {
     display: flex;
     align-items: center;
     padding-left: 20px;
-    
 }
 
 nav li a:hover {
@@ -62,10 +61,9 @@ nav li a span {
     color: #d22f27;
 }
 
-
 main {
     display: grid;
-    grid-template-columns: minmax(500px, 1fr) minmax(200px, 350px);
+    grid-template-columns: minmax(500px, 1fr) minmax(200px, 30%);
 }
 
 main content {
@@ -164,6 +162,7 @@ main aside {
     opacity: 1;
 }
 
+
 .main-movie .new-release {
     margin-top: 50px;
 }
@@ -221,6 +220,7 @@ main aside {
 .main-card img {
     width: 100%;
     height: 100%;
+    /* border-radius: 10px; */
 }
 
 .main-card-info {
@@ -256,6 +256,7 @@ main aside {
     /* background-color: #888; */
     /* border: 1px solid #d22f27; */
     box-shadow: 0px 0px 0px 2px #d22f27;
+    /* border: 1px solid red; */
 }
 
 
@@ -481,6 +482,40 @@ aside button:hover {
 
 aside button:active {
     background-color: #d22f27;
+}
+
+.genre-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 10px;
+    list-style: none;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.genre-list li {
+    border: 1px solid #aaa;
+    text-align: center;
+    padding: 5px 0;
+    font-size: 14px;
+    color: #888;
+    /* background-color: orange; */
+}
+
+.genre-list li:hover {
+    border-color: #d22f27;
+    color: #d22f27;
+    cursor: pointer;
+}
+
+.genre-list li:active {
+    background-color: #ddd;
+}
+
+.genre-list li.active-genre {
+    /* font-weight: bold; */
+    border: 1px solid #d22f27;
+    color: #d22f27;
 }
 
 @keyframes animationShow {
